[gd_scene load_steps=6 format=3 uid="uid://wkmxd6cknkib"]

[ext_resource type="Script" uid="uid://ccdpr43d5wor" path="res://03_Scripts/02_Objects/front_facing_car.gd" id="1_rtvhn"]
[ext_resource type="Texture2D" uid="uid://dc0qm3qb3y4db" path="res://01_Assets/01_Visual_Assets/01_Objects/Car/OrangeCar_1.png" id="2_rtvhn"]
[ext_resource type="Texture2D" uid="uid://cx6dlf0nh2g00" path="res://01_Assets/01_Visual_Assets/01_Objects/Car/OrangeCar_0.png" id="3_rtvhn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rd31t"]
radius = 2.5

[sub_resource type="BoxShape3D" id="BoxShape3D_rd31t"]

[node name="FrontFacingCar" type="RigidBody3D" groups=["Interactuable_Object"]]
mass = 10.0
gravity_scale = 0.0
lock_rotation = true
freeze = true
script = ExtResource("1_rtvhn")
OBJECT_NAME = "Front Car"

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_rd31t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_rd31t")
disabled = true

[node name="PerspectiveA" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
layers = 2
pixel_size = 0.0015
billboard = 1
shaded = true
texture = ExtResource("2_rtvhn")

[node name="PerspectiveB" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 1)
layers = 4
pixel_size = 0.001
shaded = true
texture = ExtResource("3_rtvhn")

[node name="PerspectiveC" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
layers = 8
pixel_size = 0.001

[node name="PerspectiveD" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
layers = 16
pixel_size = 0.001

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
